Versione funzionante, manca temporizzazione eventi, algoritmo per trovare le vicinanze, il file con le posizioni e le query